--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -186,9 +186,9 @@ body{
 */
 
 #programacion{
-	padding-top: 80px;
+	padding: 80px 0px;
 	overflow: hidden;
-	height: 1600px;
+	/*height: 1600px;*/
 	position: relative;
 }
 
@@ -612,11 +612,12 @@ body{
 ------------------------------
 */
 #videos{
-	height: 100%;
+	height: 640px;
 	width: 100%;
 	/*background-color: red;*/
 	color: #fff;
 	overflow: hidden;
+	position: relative;
 }
 	#videos .oscurecer {
 	    width: 100%;
@@ -627,18 +628,18 @@ body{
 		width: 100%;
 		height: 100%;
 		z-index: 0;
-		position: fixed;
+		position: absolute;
 		background-image: url('../video/textura.png');
 		opacity: .5;
 	}	
 	#videos #video_primero{
-		position: fixed;
+		position: absolute;;
 		top: 50%;
 		left: 50%;
 		min-width: 100%;
-		min-height: 100%;
+		min-height: 350px;
 		width: auto;
-		height: auto;
+		/*height: auto;*/
 		z-index: -1;
 		transform: translateX(-50%) translateY(-50%);
 		background-image: url('../video/video_primero.jpg');
@@ -721,7 +722,7 @@ body{
 	width: 100%;
 	height: 80px;
 	background-color: rgba(20,20,20,.75);
-	bottom: 0;
+	bottom: -70px;
 	margin: 0px;
 }
 	#videos .lista_videos .cont_lista{
