--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -197,7 +197,7 @@ body{
 */
 
 #programacion{
-	padding: 100px 0px;
+	padding: 150px 0px;
 	overflow: hidden;
 	position: relative;
 }
@@ -793,6 +793,136 @@ body{
 				background-color: #962a29;
 			}
 
+
+/*
+------------------------------
+		VIRUSKA
+------------------------------
+*/
+
+#viruska{
+	background-color: #000;
+	padding: 80px 0px;
+	margin-top: 300px;
+	margin-bottom: 300px;
+	position: relative;
+	color: #fff;
+	background-image: url('../../img/bg_viruska.jpg');
+	background-size: cover;
+}
+#viruska .separacion_viruska_sup{
+	width: 100%;
+	height: 410px;
+	background-image: url('../../img/separacion_viruska.png');
+	top: -350px;
+	z-index: -2;
+	position: absolute;
+}
+#viruska .separacion_viruska_inf{
+	width: 100%;
+	height: 410px;
+	background-image: url('../../img/separacion_viruska.png');
+	bottom: -350px;
+	z-index: -2;
+	position: absolute;
+	transform: rotate(180deg);
+}
+
+#viruska .explicacion_sec{
+	text-transform: uppercase;
+	color: #fff;
+	font-family: "PierBlackItalic";
+	transform: rotate(-5deg);
+	margin-top: -170px;
+}
+#viruska .titulosup{
+	font-size: 36px;
+	z-index: 5;
+	position: relative;
+}
+#viruska .tituloinf{
+	font-size: 48px;
+	z-index: 5;
+	position: relative;
+}
+#viruska .fondo_exp{
+	z-index: 0 !important;
+	width: 320px;
+	height: 120px;
+	background-image: url('../../img/titulo_viruska.png');
+	position: absolute;
+	top: -20px;
+	left: -50px;
+	z-index: 1;
+}
+
+#viruska .img-item{
+	width: 100%;
+	height: 400px;
+	background-size: cover;
+	background-position: center;
+	overflow: hidden;
+}
+	#viruska .img-item:before{
+		content: "";
+		width: 800px;
+		left: -700px;
+		top: -50px;
+		height: 800px;
+		background-color: rgba(0,0,0,.9);
+		position: absolute;
+		transform: rotate(-40deg);
+		animation: 1.4s slide_viruska 1;
+		opacity: 1;
+	}
+	#viruska .img-item:after{
+		content: "";
+		width: 800px;
+		left: -700px;
+		top: -50px;
+		height: 800px;
+		background-color: rgba(0,0,0,.9);
+		position: absolute;
+		transform: rotate(-20deg);
+		animation: 1.4s slide_viruska 1;
+		opacity: 1;
+	}
+
+@keyframes slide_viruska{
+	from{
+		opacity: 0;
+		left: -1200px;
+	}
+}
+
+#viruska .info_viruska{
+	margin-top: 40px;
+}
+#viruska .info_viruska h3{
+	font-size: 24px;
+	font-family: "AleoBold";
+}
+#viruska .info_viruska p{
+	font-size: 18px;
+	font-family: 'AleoLight';
+}
+
+#viruska .tecnologia_viruska{
+	font-family: 'Abel', sans-serif;
+	text-transform: uppercase;
+	vertical-align: middle;
+	color: #ccc;
+	font-size: 10px;
+	text-align: center;
+	margin-top: 25px;
+	position: absolute;
+	bottom: 0;
+	right: 150px;
+}
+	#viruska .tecnologia_viruska img{
+		filter: grayscale(100%);
+		margin: 0px 10px;
+	}
 
 /*
 ------------------------------
