--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -631,6 +631,27 @@ body{
 	overflow: hidden;
 	position: relative;
 }
+	#videos .separacion_video_sup{
+		transform: rotate(180deg);
+		width: 100%;
+		height: 130px;
+		position: absolute;
+		top: -10px;
+		z-index: 5;
+		background-image: url('../video/video_transicion.png');
+		background-repeat: repeat-x;
+		background-position: center;
+	}
+	#videos .separacion_video_inf{
+		width: 100%;
+		height: 130px;
+		position: absolute;
+		bottom: -10px;
+		z-index: 5;
+		background-image: url('../video/video_transicion.png');
+		background-repeat: repeat-x;
+		background-position: center;
+	}
 	#videos .oscurecer {
 	    width: 100%;
 	    height: 100%;
