--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -680,18 +680,28 @@ body{
 #videos .explicacion_muestra{
 	padding-top: 75px;
 }
-	#videos h1{
-		font-family: "PierBlackItalic";
-		text-transform: uppercase;
-		font-size: 45px;
+	#videos .titulo{
 		transform: rotate(-5deg);
+		margin-top: 110px;
 	}
-		#videos h1 .salto_linea{
-			font-size: 69px;
+	#videos .titulosup{
+		font-family: "AleoBold";
+		font-style: italic;
+		font-size: 36px;
+		z-index: 5;
+		position: relative;
+	}
+	#videos .tituloinf{
+		text-transform: uppercase;
+		font-family: "PierBlackItalic";
+		font-size: 69px;
+		z-index: 5;
+		position: relative;
+		line-height: 40px;
+	}
+		#videos .amarillo{
+			color: #f1c40f;
 		}
-			#videos .amarillo{
-				color: #f1c40f;
-			}
 	#videos .texto_explicacion{
 		font-size: 33px;
 		margin-top: 100px;
@@ -876,21 +886,24 @@ body{
 }
 
 #viruska .explicacion_sec{
-	text-transform: uppercase;
 	color: #fff;
-	font-family: "PierBlackItalic";
 	transform: rotate(-5deg);
-	margin-top: -170px;
+	margin-top: -200px;
 }
 #viruska .titulosup{
+	font-family: "AleoBold";
+	font-style: italic;
 	font-size: 36px;
 	z-index: 5;
 	position: relative;
 }
 #viruska .tituloinf{
-	font-size: 48px;
+	text-transform: uppercase;
+	font-family: "PierBlackItalic";
+	font-size: 69px;
 	z-index: 5;
 	position: relative;
+	line-height: 35px;
 }
 #viruska .fondo_exp{
 	z-index: 0 !important;
